force-app/main/default/objects/Parametrizacao_faixa_aging__c/Parametrizacao_faixa_aging__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para a parametrização das Faixas de Aging.</description>
    <label>Parametrização Faixa de Aging</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Nome de Parametrização Faixa de Aging</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parametrizações Faixas de Aging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>