force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Aging_ate__c.field-meta.xml
<CustomField>
    <fullName>Aging_ate__c</fullName>
    <label>Aging até</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>