force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Aging_de__c.field-meta.xml
<CustomField>
    <fullName>Aging_de__c</fullName>
    <description>Preencher esse campo.</description>
    <label>Aging de</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>