force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Contatos_dias_distintos__c.field-meta.xml
<CustomField>
    <fullName>Contatos_dias_distintos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contatos em dias distintos dentro da faixa.</description>
    <label>Contatos dias distintos</label>
    <type>Checkbox</type>
</CustomField>