force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Contatos_faixa__c.field-meta.xml
<CustomField>
    <fullName>Contatos_faixa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>contato por dia dentro da faixa.</description>
    <label>Contatos por faixa</label>
    <type>Checkbox</type>
</CustomField>