force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Nome_faixa__c.field-meta.xml
<CustomField>
    <fullName>Nome_faixa__c</fullName>
    <label>Nome da faixa</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>