force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Quantidade_contatos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_contatos__c</fullName>
    <label>Quantidade de contatos</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>