force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Quantidade_minima_contatos_por_faixa__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_minima_contatos_por_faixa__c</fullName>
    <label>Quantidade mínima de contatos por faixa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>