force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Tipo_Macro_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Macro_OS__c</fullName>
    <label>Tipo Macro da Os</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_macro_Os</valueSetName>
    </valueSet>
</CustomField>