force-app/main/default/objects/Parametrizacao_faixa_aging__c/fields/Tipo_Micro_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Micro_OS__c</fullName>
    <label>Tipo Micro da OS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_micro_OS</valueSetName>
    </valueSet>
</CustomField>