force-app/main/default/objects/Parametrizacao_faixa_aging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome_faixa__c</columns>
    <columns>Aging_de__c</columns>
    <columns>Aging_ate__c</columns>
    <columns>Quantidade_contatos__c</columns>
    <columns>Tipo_Macro_OS__c</columns>
    <columns>Tipo_Micro_OS__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>